# raycaster-wasm

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: pages.yml
wasm/: engine.cpp  engine_core.cpp  engine_core.h  fixedpoint_helpers.h  screen.h  trig_lut.h  world_generation.h
web/: engine.wasm  index.html  main.js  package-lock.json  package.json
web/public/: engine.wasm
web/src/: App.tsx  Home.tsx  index.css  main.tsx
web/src/components/: MapEditor.tsx
web/src/pages/: Config.tsx  Render.tsx
web/src/router/: index.tsx
web/src/wasm/: engine.ts  mapStore.ts
